# indy-vdr-test

./: Cargo.toml
src/: cred_def.rs  main.rs  nym.rs  rev_reg.rs  schema.rs
