[package]
name = "indy-vdr-test"
version = "0.1.0"
edition = "2021"

[dependencies]
indy-vdr =  { git = "https://github.com/boschresearch/indy-vdr", branch = "feature/config-flag" }
#indy-vdr = { path = "../indy-vdr/libindy_vdr" }
indy-data-types = { version = "0.5" }
indy-credx = { version = "0.3.1" }
clap = { version = "3.1.3", features = ["derive"] }
log = "0.4.0"
env_logger = "0.9.0"
futures-executor = "0.3.17"
serde = "1.0"
serde_json = "1.0"
rand =  { version = "0.8.5", features = ["libc"] }
chrono = "0.4"

[features]
derive = []
