[package]
name = "indy-vdr-test"
version = "0.1.0"
edition = "2021"

[dependencies]
indy-vdr =  { version = "0.4" }
indy-data-types = { version = "0.6.1" }
indy-credx = { version = "1.0.3" }
clap = { version = "3.1.3", features = ["derive"] }
log = "0.4.0"
env_logger = "0.9.0"
futures-executor = "0.3.17"
serde = "1.0"
serde_json = "1.0"
rand =  { version = "0.8.5", features = ["libc"] }
chrono = "0.4"

[features]
derive = []
