[package]
name = "indy-vdr-test"
version = "0.1.0"
edition = "2021"

[dependencies]
indy-vdr =  { git = "https://github.com/hyperledger/indy-vdr.git", rev = "c143268"  }
indy-data-types = { version = "0.7" }
indy-credx = { version = "1.1" }
clap = { version = "3.1.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
futures-executor = "0.3.17"
serde = "1.0"
serde_json = "1.0"
rand =  { version = "0.8.5", features = ["libc"] }
chrono = "0.4"

[features]
derive = []
